Reindexando de forma local

--- a/WSSemanticSearch/Web.config
+++ b/WSSemanticSearch/Web.config
@@ -18,10 +18,10 @@
     <add key="passwordXively" value="interaccionIoT" />
     <add key="srvExpansionConsulta.ExpancionConsulta" value="http://localhost:57959/WebServiceExpansionConsulta/ExpancionConsulta.asmx" />
     <add key="idiomaBusqueda" value="Español" />
-    <add key="BDDfuente" value="Xively" />
     <add key="tipoAnalizador" value="Español" />
     <add key="utilizarExpansion" value="Si" />
     <add key="OntologiaAnterior" />
+    <add key="BDDfuente" value="Local" />
     <add key="FileOntology" value="OntologiaContaminacionAmbiental.owl" />
     <add key="BusquedaBloqueada" value="No" />
   </appSettings>
