--- a/AppWeb/web.config
+++ b/AppWeb/web.config
@@ -34,7 +34,7 @@
             durante la depuración.
         -->
     <roleManager enabled="true" />
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="false" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Data.Services.Client, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
