--- a/WSSemanticSearch/Web.config
+++ b/WSSemanticSearch/Web.config
@@ -73,7 +73,7 @@
             during development.
         -->
     <httpRuntime maxRequestLength="1024000" executionTimeout="999999"/>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="false" targetFramework="4.5"/>
     <!--
             The <authentication> section enables configuration 
             of the security authentication mode used by 
