--- a/WebServiceExpansionConsulta/Web.config
+++ b/WebServiceExpansionConsulta/Web.config
@@ -35,7 +35,7 @@
       durante el desarrollo.
        -->
     <httpRuntime maxRequestLength="1024000" executionTimeout="999999"/>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="false" targetFramework="4.5"/>
     <!--
           La sección <authentication> habilita la configuración 
       del modo de autenticación de seguridad que usa 
