--- a/WSWordNet/WSWordNet.csproj
+++ b/WSWordNet/WSWordNet.csproj
@@ -117,6 +117,7 @@
     <Content Include="bin\dict\sents.vrb" />
     <Content Include="bin\dict\verb.exc" />
     <Content Include="bin\dict\verb.Framestext" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\Servicio Web.pubxml" />
   </ItemGroup>
   <PropertyGroup>
