--- a/WSSemanticSearch/WSSemanticSearch.csproj
+++ b/WSSemanticSearch/WSSemanticSearch.csproj
@@ -124,19 +124,18 @@
     <Content Include="Ontology\DogOnt.owl" />
     <Content Include="Ontology\system.owl" />
     <None Include="Properties\PublishProfiles\WebServiceSemanticSearch.pubxml" />
-    <Content Include="SemanticIndex\segments_2h6q" />
-    <Content Include="SemanticIndex\_4y9k.fdt" />
-    <Content Include="SemanticIndex\_4y9k.fdx" />
-    <Content Include="SemanticIndex\_4y9k.fnm" />
-    <Content Include="SemanticIndex\_4y9k.frq" />
-    <Content Include="SemanticIndex\_4y9k.nrm" />
-    <Content Include="SemanticIndex\_4y9k.prx" />
-    <Content Include="SemanticIndex\_4y9k.tii" />
-    <Content Include="SemanticIndex\_4y9k.tis" />
-    <Content Include="SemanticIndex\_4y9k.tvd" />
-    <Content Include="SemanticIndex\_4y9k.tvf" />
-    <Content Include="SemanticIndex\_4y9k.tvx" />
-    <Content Include="SemanticIndex\segments.gen" />
+    <Content Include="SemanticIndex\segments_1d7g" />
+    <Content Include="SemanticIndex\_2qdg.fdt" />
+    <Content Include="SemanticIndex\_2qdg.fdx" />
+    <Content Include="SemanticIndex\_2qdg.fnm" />
+    <Content Include="SemanticIndex\_2qdg.frq" />
+    <Content Include="SemanticIndex\_2qdg.nrm" />
+    <Content Include="SemanticIndex\_2qdg.prx" />
+    <Content Include="SemanticIndex\_2qdg.tii" />
+    <Content Include="SemanticIndex\_2qdg.tis" />
+    <Content Include="SemanticIndex\_2qdg.tvd" />
+    <Content Include="SemanticIndex\_2qdg.tvf" />
+    <Content Include="SemanticIndex\_2qdg.tvx" />
     <None Include="Web References\srvExpansionConsulta\ExpancionConsulta.disco" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
