Cambios en el despliegue

--- a/WSSemanticSearch/WSSemanticSearch.csproj
+++ b/WSSemanticSearch/WSSemanticSearch.csproj
@@ -123,6 +123,7 @@
     <Content Include="bin\WSSemanticSearch.pdb" />
     <Content Include="Ontology\DogOnt.owl" />
     <Content Include="Ontology\system.owl" />
+    <None Include="Properties\PublishProfiles\semanticsearchiot.net - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\WebServiceSemanticSearch.pubxml" />
     <Content Include="SemanticIndex\segments_1d7g" />
     <Content Include="SemanticIndex\_2qdg.fdt" />
