--- a/WSWordNet/WSWordNet.csproj
+++ b/WSWordNet/WSWordNet.csproj
@@ -118,6 +118,7 @@
     <Content Include="bin\dict\verb.exc" />
     <Content Include="bin\dict\verb.Framestext" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\semanticsearchiot.net - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Servicio Web.pubxml" />
   </ItemGroup>
   <PropertyGroup>
