--- a/WebServiceExpansionConsulta/Web.config
+++ b/WebServiceExpansionConsulta/Web.config
@@ -9,8 +9,8 @@
 -->
 <configuration>
   <appSettings>
-    <add key="srvWordNet.WSWordNet" value="http://localhost:3333/WSWordNet.asmx"/>
     <!--<add key="srvWordNet.WSWordNet" value="http://localhost/SemanticSearchIoT/WSWordNet/WSWordNet.asmx" />-->
+  <add key="srvWordNet.WSWordNet" value="http://localhost:3333/WSWordNet.asmx"/>
   </appSettings>
   <connectionStrings>
     <clear/>
@@ -35,7 +35,7 @@
       durante el desarrollo.
        -->
     <httpRuntime maxRequestLength="1024000" executionTimeout="999999"/>
-    <compilation debug="false" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5"/>
     <!--
           La sección <authentication> habilita la configuración 
       del modo de autenticación de seguridad que usa 
