Colocando referencias remotas

--- a/WSSemanticSearch/Properties/Settings.settings
+++ b/WSSemanticSearch/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="WSSemanticSearch_srvExpansionConsulta_ExpancionConsulta" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://localhost:18290/ExpancionConsulta.asmx</Value>
+      <Value Profile="(Default)">http://www.semanticsearchiot.net/sswot/WebServiceExpansionConsulta/ExpancionConsulta.asmx</Value>
     </Setting>
   </Settings>
 </SettingsFile>
