--- a/WSSemanticSearch/Web.config
+++ b/WSSemanticSearch/Web.config
@@ -134,7 +134,7 @@
     <WSSemanticSearch.Properties.Settings>
       <setting name="WSSemanticSearch_srvExpansionConsulta_ExpancionConsulta"
         serializeAs="String">
-        <value>http://localhost:18290/ExpancionConsulta.asmx</value>
+        <value>http://www.semanticsearchiot.net/sswot/WebServiceExpansionConsulta/ExpancionConsulta.asmx</value>
       </setting>
     </WSSemanticSearch.Properties.Settings>
   </applicationSettings>
