--- a/WebServiceExpansionConsulta/Web.config
+++ b/WebServiceExpansionConsulta/Web.config
@@ -10,7 +10,7 @@
 <configuration>
   <appSettings>
     <!--<add key="srvWordNet.WSWordNet" value="http://localhost/SemanticSearchIoT/WSWordNet/WSWordNet.asmx" />-->
-  <add key="srvWordNet.WSWordNet" value="http://localhost:3333/WSWordNet.asmx"/>
+  <add key="srvWordNet.WSWordNet" value="http://www.semanticsearchiot.net/sswot/WsWordNet/WSWordNet.asmx"/>
   </appSettings>
   <connectionStrings>
     <clear/>
