Colocando servicio de json local: retornarjosonSensorLocal

--- a/WSSemanticSearch/WSSemanticSearch.csproj
+++ b/WSSemanticSearch/WSSemanticSearch.csproj
@@ -49,6 +49,9 @@
     <FilesToIncludeForPublish>AllFilesInTheProject</FilesToIncludeForPublish>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -123,6 +126,8 @@
     <Content Include="bin\WSSemanticSearch.pdb" />
     <Content Include="Ontology\DogOnt.owl" />
     <Content Include="Ontology\system.owl" />
+    <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\semanticsearchiot.net - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\WebServiceSemanticSearch.pubxml" />
     <Content Include="SemanticIndex\segments_1d7g" />
