--- a/WSSemanticSearch/Web.config
+++ b/WSSemanticSearch/Web.config
@@ -1,7 +1,7 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="WSSemanticSearch.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -28,32 +28,26 @@
   <system.serviceModel>
     <bindings>
       <webHttpBinding>
-        <binding name="NGeoBinding" allowCookies="true" maxBufferSize="20000000"
-          maxBufferPoolSize="20000000" maxReceivedMessageSize="20000000">
-          <readerQuotas maxDepth="32" maxStringContentLength="200000000"
-            maxArrayLength="200000000" />
+        <binding name="NGeoBinding" allowCookies="true" maxBufferSize="20000000" maxBufferPoolSize="20000000" maxReceivedMessageSize="20000000">
+          <readerQuotas maxDepth="32" maxStringContentLength="200000000" maxArrayLength="200000000" />
         </binding>
       </webHttpBinding>
     </bindings>
     <behaviors>
       <endpointBehaviors>
         <behavior name="NGeoBehavior">
-          <webHttp/>
+          <webHttp />
         </behavior>
       </endpointBehaviors>
     </behaviors>
     <client>
-      <endpoint address="http://api.geonames.org" behaviorConfiguration="NGeoBehavior"
-        binding="webHttpBinding" bindingConfiguration="NGeoBinding"
-        contract="NGeo.GeoNames.IInvokeGeoNamesServices" />
-      <endpoint address="http://where.yahooapis.com/v1" behaviorConfiguration="NGeoBehavior"
-        binding="webHttpBinding" bindingConfiguration="NGeoBinding"
-        contract="NGeo.Yahoo.GeoPlanet.IInvokeGeoPlanetServices" />
+      <endpoint address="http://api.geonames.org" behaviorConfiguration="NGeoBehavior" binding="webHttpBinding" bindingConfiguration="NGeoBinding" contract="NGeo.GeoNames.IInvokeGeoNamesServices" />
+      <endpoint address="http://where.yahooapis.com/v1" behaviorConfiguration="NGeoBehavior" binding="webHttpBinding" bindingConfiguration="NGeoBinding" contract="NGeo.Yahoo.GeoPlanet.IInvokeGeoPlanetServices" />
     </client>
   </system.serviceModel>
   <connectionStrings>
-    <clear/>
-    <add name="ConexionMsec" connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=BDIndiceIot;User ID=saiot; Password=MiceM1" providerName="System.Data.SqlClient"/>
+    <clear />
+    <add name="ConexionMsec" connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=BDIndiceIot;User ID=saiot; Password=MiceM1" providerName="System.Data.SqlClient" />
     <!--<add name="ConexionMsec" connectionString="Data Source=DECAFIET\SQLEXPRESS;Initial Catalog=BDIndiceIot;User ID=saiot; Password=MiceM1" providerName="System.Data.SqlClient" />-->
     <!--<add name="ConexionMsec" connectionString="Data Source=betel.colombiahosting.com.co\MSSQLSERVER2012;Initial Catalog=semantic_BDIndiceIoT;Persist Security Info=True;User ID=seman_saiot;Password=adminMiceM1@336" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
@@ -72,14 +66,14 @@
             affects performance, set this value to true only 
             during development.
         -->
-    <httpRuntime maxRequestLength="1024000" executionTimeout="999999"/>
-    <compilation debug="false" targetFramework="4.5"/>
+    <httpRuntime maxRequestLength="1024000" executionTimeout="999999" />
+    <compilation debug="false" targetFramework="4.5" />
     <!--
             The <authentication> section enables configuration 
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
         -->
-    <authentication mode="Windows"/>
+    <authentication mode="Windows" />
     <!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
@@ -92,7 +86,7 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
   </system.web>
   <!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
@@ -101,39 +95,38 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="IKVM.Runtime" publicKeyToken="13235d27fcbfff58" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0"/>
+        <assemblyIdentity name="IKVM.Runtime" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="IKVM.OpenJDK.Core" publicKeyToken="13235d27fcbfff58" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0"/>
+        <assemblyIdentity name="IKVM.OpenJDK.Core" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="IKVM.OpenJDK.Util" publicKeyToken="13235d27fcbfff58" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0"/>
+        <assemblyIdentity name="IKVM.OpenJDK.Util" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="IKVM.OpenJDK.XML.API" publicKeyToken="13235d27fcbfff58" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0"/>
+        <assemblyIdentity name="IKVM.OpenJDK.XML.API" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="IKVM.OpenJDK.Text" publicKeyToken="13235d27fcbfff58" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0"/>
+        <assemblyIdentity name="IKVM.OpenJDK.Text" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="IKVM.OpenJDK.SwingAWT" publicKeyToken="13235d27fcbfff58" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0"/>
+        <assemblyIdentity name="IKVM.OpenJDK.SwingAWT" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <applicationSettings>
     <WSSemanticSearch.Properties.Settings>
-      <setting name="WSSemanticSearch_srvExpansionConsulta_ExpancionConsulta"
-        serializeAs="String">
+      <setting name="WSSemanticSearch_srvExpansionConsulta_ExpancionConsulta" serializeAs="String">
         <value>http://www.semanticsearchiot.net/sswot/WebServiceExpansionConsulta/ExpancionConsulta.asmx</value>
       </setting>
     </WSSemanticSearch.Properties.Settings>
