--- a/WSWordNet/WSWordNet.csproj
+++ b/WSWordNet/WSWordNet.csproj
@@ -59,6 +59,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\AppWeb\Referencias\WordNet\jaws-bin.dll</HintPath>
     </Reference>
+    <Reference Include="Syn.WordNet, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Syn.WordNet.1.0.5\lib\net45\Syn.WordNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -117,6 +120,7 @@
     <Content Include="bin\dict\sents.vrb" />
     <Content Include="bin\dict\verb.exc" />
     <Content Include="bin\dict\verb.Framestext" />
+    <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\semanticsearchiot.net - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Servicio Web.pubxml" />
