--- a/WSWordNet/WSWordNet.csproj
+++ b/WSWordNet/WSWordNet.csproj
@@ -104,6 +104,7 @@
     <Content Include="libman.json" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
     <None Include="Properties\PublishProfiles\semanticsearchiot.net - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Servicio Web.pubxml" />
   </ItemGroup>
